# sccli-kit

./: .gitignore  main.py  pyproject.toml
scck/: cli.py  const.py  error.py  fn.py
scck/basic/: __init__.py  jobgen.py  jobgen_template.py
scck/config/: __init__.py  auto.py  auto_cfg.py  default.toml
scck/engine/: __init__.py  config.py  section.py  title.py
scck/info/: __init__.py  dirstat.py  syhq.py  user_info.py
