[build-system]
requires = [
    "hatchling>=1.18",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "scck"
description = "A command line interface toolkit on super computer."
readme = "README.md"
requires-python = ">=3.8"
version = "1.0.0"
license = "MIT"

dependencies = []

[project.scripts]
scck = "scck.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["scck"]
