[build-system]
requires = [
    "hatchling>=1.18",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "scck"
dynamic = ["version"]	
description = "A command line interface toolkit on super computer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

dependencies = [
    "tqdm",
    "tomli; python_version < '3.11'",
    "prompt_toolkit"
]

[project.scripts]
scck = "scck.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["scck"]

[tool.hatch.version]
source = "vcs"
